--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   background-image: url("../images/fondo.jpg"); }
   .head .content {
     position: absolute;
-    top: 40%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 60px;
@@ -160,7 +160,7 @@
         font-size: 3rem; }
     .head .content {
       width: 60%;
-      top: 60%;
+      top: 50%;
       font-size: 3rem; } }
 
 @media only screen and (min-width: 1624px) {
@@ -174,6 +174,7 @@
         font-size: 6rem; }
     .head .content {
       width: 40%;
+      top: 55%;
       font-size: 4.4rem;
       line-height: 5.5rem;
       height: 12rem; }
@@ -328,7 +329,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 5px;
   box-sizing: border-box;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
   transform: translateY(-100px); }
@@ -337,21 +338,26 @@
   transform: translateY(0); }
 
 .container .card .face.face2 .content p {
-  margin: 0;
-  padding: 0; }
+  margin: 0.5rem 0; }
 
 .container .card .face.face2 .content a {
-  margin: 15px 0 0;
   display: inline-block;
   text-decoration: none;
   font-weight: 900;
+  border-radius: 5px;
   color: #333;
   padding: 5px;
   border: 1px solid #333; }
 
 .container .card .face.face2 .content a:hover {
-  background: #333;
+  background: #16a085;
   color: #fff; }
+
+.contentLinks {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%; }
 
 @media only screen and (min-width: 1024px) {
   .projects {
