--- a/scss/_proyects.scss
+++ b/scss/_proyects.scss
@@ -79,7 +79,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-100px);
@@ -90,29 +90,33 @@
 }
 
 .container .card .face.face2 .content p{
-    margin: 0;
-    padding: 0;
+    margin: 0.5rem 0;
 }
 
 .container .card .face.face2 .content a{
-    margin: 15px 0 0;
     display:  inline-block;
     text-decoration: none;
     font-weight: 900;
+    border-radius: 5px;
     color: #333;
     padding: 5px;
     border: 1px solid #333;
 }
 
 .container .card .face.face2 .content a:hover{
-    background: #333;
+    background: #16a085;
     color: #fff;
+}
+.contentLinks {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 
 
 @media only screen and (min-width: 1024px) {
     .projects {
-
         justify-content: center;
     }
 }
