--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,6 +1,6 @@
 .about {
     background-color: #212529;
-    margin: 2rem 0;
+    padding: 0 0 2rem 0;
     .about_h2 {
         text-align: center;
         color: white;
@@ -12,8 +12,10 @@
         width: 100%;
         & img{ 
             width: 80%;
+            height: 40vh;
             margin: 0 auto;
             border-radius: 10px;
+            // object-fit: contain;
         }
         & p {
             text-align: center;
@@ -23,7 +25,15 @@
     }
     
 }
-
+@media only screen and (min-width: 481px) {
+    .about .aboutContent img {
+        
+            width: 90%;
+            height: 50vh;
+            
+        
+    }
+}
 @media only screen and (min-width: 769px) {
     .about {
         .aboutContent {
@@ -50,7 +60,7 @@
                 margin-left: 10%;
             }
             & p {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 margin-right: 10%;
             }
         }
