--- a/scss/_proyects.scss
+++ b/scss/_proyects.scss
@@ -113,10 +113,17 @@
     align-items: center;
     width: 100%;
 }
-
+.logoFachari {
+    width: 60% !important;
+    margin-left: 20%;
+    height: 10vh;
+}
 
 @media only screen and (min-width: 1024px) {
     .projects {
         justify-content: center;
+    }
+    .container {
+        max-width: 2000px;
     }
 }
