--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -24,7 +24,7 @@
         .skills_logo {
             width: 90%;
             margin-left: 7%;
-            margin-bottom: 2rem;
+            padding-bottom: 2rem;
             & img {
                 width: 8%;
             }
