--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,14 +12,11 @@ body {
 header {
     
     .navbar-brand {
-        width: 50%;
-        .logo {
-            width: 90%;
+        width: 70%;
+        & .logo {
+            width: 100%;
         }
     }
-
-
-
 }
 
 @media only screen and (min-width: 1024px) {
