--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -1,5 +1,6 @@
 .skills {
     margin: 0 auto;
+    padding-top: 1rem;
     background-image: url('../images/fondo.jpg');
     & h2 {
         text-align: center;
@@ -8,7 +9,7 @@
         width: 90%;
         margin: 0 auto;
         & img {
-            width: 30%;
+            width: 20%;
             margin-left: 2%;
         }
     }
