--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   background-image: url("../images/fondo.jpg"); }
   .head .content {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 6rem;
@@ -30,7 +30,7 @@
         top: 0;
         color: #16a085;
         font-size: 42px;
-        line-height: 40px;
+        line-height: 32px;
         -webkit-animation-name: opacity;
         -webkit-animation-duration: 2s;
         -webkit-animation-iteration-count: infinite;
@@ -138,12 +138,14 @@
 
 @media only screen and (min-width: 481px) {
   .head .content {
+    top: 32%;
     width: 80%; } }
 
 @media only screen and (min-width: 769px) {
   .head .headContent {
     width: 45%; }
   .head .content {
+    top: 35%;
     width: 50%; } }
 
 @media only screen and (min-width: 1024px) {
@@ -207,10 +209,12 @@
     flex-direction: column;
     width: 100%; }
     .about .aboutContent img {
-      width: 80%;
+      width: 70%;
       height: 40vh;
       margin: 0 auto;
-      border-radius: 10px; }
+      border-radius: 10px;
+      object-fit: cover;
+      object-position: top; }
     .about .aboutContent p {
       text-align: center;
       color: white;
@@ -218,8 +222,8 @@
 
 @media only screen and (min-width: 481px) {
   .about .aboutContent img {
-    width: 90%;
-    height: 50vh; } }
+    width: 60%;
+    height: 40vh; } }
 
 @media only screen and (min-width: 769px) {
   .about .aboutContent {
@@ -228,6 +232,7 @@
     width: 100%; }
     .about .aboutContent img {
       width: 30%;
+      height: 30vh;
       border-radius: 10px;
       margin: 2rem; }
     .about .aboutContent p {
@@ -237,13 +242,16 @@
   .about {
     padding: 3rem 0; }
     .about .aboutContent img {
-      margin-left: 10%; }
+      margin-left: 10%;
+      width: 40%;
+      height: 40vh; }
     .about .aboutContent p {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       margin-right: 10%; } }
 
 .skills {
   margin: 0 auto;
+  padding-top: 1rem;
   background-image: url("../images/fondo.jpg"); }
   .skills h2 {
     text-align: center; }
@@ -251,7 +259,7 @@
     width: 90%;
     margin: 0 auto; }
     .skills .skills_logo img {
-      width: 30%;
+      width: 20%;
       margin-left: 2%; }
 
 @media only screen and (min-width: 1024px) {
@@ -378,24 +386,26 @@
 
 footer {
   display: flex;
-  justify-content: center;
-  margin: 1rem; }
+  justify-content: center; }
   footer a {
     width: 20%;
-    text-align: center; }
+    text-align: center;
+    margin: 1rem; }
     footer a img {
-      width: 50%; }
+      width: 100%; }
 
 @media only screen and (min-width: 1024px) {
   footer {
-    display: flex;
-    justify-content: center;
     margin: 1rem; }
-    footer a {
-      width: 20%;
-      text-align: center; }
-      footer a img {
-        width: 30%; } }
+    footer a img {
+      width: 60%; } }
+
+@media only screen and (min-width: 1624px) {
+  footer a img {
+    width: 40%; } }
+
+html {
+  scroll-behavior: smooth; }
 
 body {
   font-family: 'Roboto', sans-serif; }
@@ -405,12 +415,24 @@ header .navbar-brand {
   header .navbar-brand .logo {
     width: 100%; }
 
+@media only screen and (min-width: 481px) {
+  header .navbar-brand {
+    width: 50%; }
+    header .navbar-brand .logo {
+      width: 50%; } }
+
 @media only screen and (min-width: 1024px) {
   header .navbar-brand {
     width: 50%; }
     header .navbar-brand .logo {
-      width: 70%; }
+      width: 45%; }
   header .navbar-dark .navbar-nav .nav-link {
     font-size: 2rem; }
   h2 {
     font-size: 3.5rem; } }
+
+@media only screen and (min-width: 1200px) {
+  header .navbar-brand {
+    width: 50%; }
+    header .navbar-brand .logo {
+      width: 25%; } }
