--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -11,11 +11,12 @@
         flex-direction: column;
         width: 100%;
         & img{ 
-            width: 80%;
+            width: 70%;
             height: 40vh;
             margin: 0 auto;
             border-radius: 10px;
-            // object-fit: contain;
+            object-fit: cover;
+            object-position: top;
         }
         & p {
             text-align: center;
@@ -27,11 +28,8 @@
 }
 @media only screen and (min-width: 481px) {
     .about .aboutContent img {
-        
-            width: 90%;
-            height: 50vh;
-            
-        
+            width: 60%;
+            height: 40vh;
     }
 }
 @media only screen and (min-width: 769px) {
@@ -42,6 +40,7 @@
             width: 100%;
             & img{ 
                 width: 30%;
+                height: 30vh;
                 border-radius: 10px;
                 margin: 2rem;
             }
@@ -58,9 +57,11 @@
         .aboutContent {
             & img{ 
                 margin-left: 10%;
+                width: 40%;
+                height: 40vh;
             }
             & p {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 margin-right: 10%;
             }
         }
