--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,11 +3,12 @@
 @import "skills";
 @import "proyects";
 @import "footer";
-
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
-
 }
 header {
     
@@ -18,14 +19,24 @@ header {
         }
     }
 }
-
+@media only screen and (min-width: 481px) {
+    header {
+        
+        .navbar-brand {
+            width: 50%;
+            .logo {
+                width: 50%;
+            }
+        }
+    }
+}
 @media only screen and (min-width: 1024px) {
     header {
         
         .navbar-brand {
             width: 50%;
             .logo {
-                width: 70%;
+                width: 45%;
             }
         }
         .navbar-dark .navbar-nav .nav-link {
@@ -35,4 +46,15 @@ header {
     h2 {
         font-size: 3.5rem;
     }
+}
+@media only screen and (min-width: 1200px) {
+    header {
+        .navbar-brand {
+            width: 50%;
+            .logo {
+                width: 25%;
+            }
+        }
+    }
+
 }
